Change Imaginary to Fictionary, and fix max and nim width in card-section, quote-section and call to action to make the stretch and squeeze preperly when resizing screen

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  jus
   padding: 20px 200px 120px 200px;
   gap: 20px;
 }
@@ -117,7 +118,10 @@ button {
 .card-section {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  justify-content: space-evenly;
+  width: 80%;
+  max-width: 1600px;
+  min-width: 900px;
 }
 
 .card {
@@ -151,6 +155,15 @@ button {
   padding: 100px 280px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quote-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1200px;
+  min-width: 900px;
 }
 
 .quote {
@@ -188,6 +201,8 @@ button {
   width: 100%;
   padding: 40px 100px;
   border-radius: 8px;
+  min-width: 700px;
+  max-width: 1400px;
 }
 
 .cta-text h3{
